--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,108 +1,145 @@
 .flashcard {
-    width: 80vw;
-    height: 65px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 25px;
+  width: 80vw;
+  height: 65px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
 }
 
 .flashcard p {
-    font-family: Recursive;
-    font-size: 16px;
-    font-weight: 700;
-    margin-left: 15px;
+  font-family: Recursive;
+  font-size: 16px;
+  font-weight: 700;
+  margin-left: 15px;
 }
 
 .flashcard ion-icon {
-    font-size: 25px;
-    margin-right: 15px;
+  font-size: 25px;
+  margin-right: 15px;
+  --ionicon-stroke-width: 45px;
 }
 
 .flashcard img {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .red,
 .orange,
 .green {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 .red {
-    color: #FF3030;
+  color: #ff3030;
 }
 
 .green {
-    color: #2FBE34;
+  color: #2fbe34;
 }
 
 .orange {
-    color: #FF922E;
+  color: #ff922e;
 }
 
 .card-front {
-    width: 80vw;
-    height: 130px;
-    background-color: #FFFFD4;
-    border-radius: 5px;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
-    margin-bottom: 25px;
-    position: relative;
+  width: 80vw;
+  height: 130px;
+  background-color: #ffffd4;
+  border-radius: 5px;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+  margin-bottom: 25px;
+  position: relative;
 }
 
-.card-front>h1 {
-    font-family: Recursive;
-    font-size: 17px;
-    font-weight: 400;
-    margin-left: 15px;
-    margin-right: 2px;
-    padding-top: 15px;
+.card-front > h1 {
+  font-family: Recursive;
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 15px;
+  margin-right: 2px;
+  padding-top: 15px;
 }
 
 .arrow {
-    width: 25px;
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
+  width: 25px;
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
 }
 
 .buttons {
-    width: 100%;
-    position: absolute;
-    bottom: 4px;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  position: absolute;
+  bottom: 4px;
+  display: flex;
+  justify-content: center;
 }
 
 .error,
 .almost,
 .zap {
-    width: 85px;
-    height: 38px;
-    font-size: 14px;
-    font-family: Recursive;
-    color: #FFFFFF;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
+  width: 85px;
+  height: 38px;
+  font-size: 14px;
+  font-family: Recursive;
+  color: #ffffff;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
 }
 
 .error {
-    background-color: #FF3030;
-    margin-right: 5px;
+  background-color: #ff3030;
+  margin-right: 5px;
 }
 
 .almost {
-    background-color: #FF922E;
-    margin-right: 5px;
+  background-color: #ff922e;
+  margin-right: 5px;
 }
 
 .zap {
-    background-color: #2FBE34;
+  background-color: #2fbe34;
+}
+
+@media (min-width: 800px) {
+  .arrow {
+    width: 30px;
+  }
+
+  .flashcard {
+    width: 565px;
+    height: 92px;
+  }
+
+  .flashcard p {
+    font-size: 24px;
+  }
+
+  .flashcard ion-icon {
+    font-size: 38px;
+    margin-right: 15px;
+  }
+
+  .card-front {
+    width: 565px;
+  }
+
+  .card-front > h1 {
+    font-size: 22px;
+  }
+
+  .error,
+  .almost,
+  .zap {
+    width: 105px;
+    height: 48px;
+    font-size: 16px;
+  }
 }
