--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,23 +1,44 @@
 .completed {
-    width: 100vw;
-    height: 70px;
-    background-color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    bottom: 0;
+  width: 100vw;
+  height: 70px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
 }
 
 .completed p {
-    font-family: Recursive;
-    font-size: 18px;
-    font-weight: 400;
-    color: #333333;
-    margin-bottom: 5px;
+  font-family: Recursive;
+  font-size: 18px;
+  font-weight: 400;
+  color: #333333;
+  margin-bottom: 5px;
 }
 
 .completed img {
+  margin-left: 3px;
+}
+
+@media (min-width: 800px) {
+  .completed {
+    height: 90px;
+  }
+
+  .completed p {
+    font-size: 28px;
+    margin-bottom: 5px;
+  }
+
+  .completed span {
+    font-size: 28px;
+  }
+
+  .completed img {
     margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 5px;
+  }
 }
