--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,15 +1,30 @@
 .logo-title {
-    width: 265px;
-    height: 60px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 50px 0;
+  width: 265px;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 50px 0;
 }
 
 .title {
-    font-size: 36px;
-    color: #FFFFFF;
-    margin: 25px 0;
-    font-family: Righteous;
+  font-size: 36px;
+  color: #ffffff;
+  margin: 25px 0;
+  font-family: Righteous;
+}
+
+@media (min-width: 800px) {
+  .logo-title {
+    width: 420px;
+  }
+
+  .logo-title img {
+    width: 86px;
+    height: 100px;
+  }
+
+  .title {
+    font-size: 60px;
+  }
 }
