--- a/src/components/Welcome/style.css
+++ b/src/components/Welcome/style.css
@@ -1,32 +1,46 @@
 .screen-welcome {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
-    width: 136px;
-    height: 161px;
+  width: 136px;
+  height: 161px;
 }
 
 .title {
-    font-size: 36px;
-    color: #FFFFFF;
-    margin: 25px 0;
-    font-family: Righteous;
+  font-size: 55px;
+  color: #ffffff;
+  margin: 25px 0;
+  font-family: Righteous;
 }
 
 .button-start {
-    width: 246px;
-    height: 54px;
-    background-color: #FFFFFF;
-    border-radius: 5px;
-    border: 1px solid #D70900;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    font-family: Recursive;
-    font-weight: 400;
-    font-size: 18px;
-    color: #D70900;
+  width: 246px;
+  height: 54px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 1px solid #d70900;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: Recursive;
+  font-weight: 400;
+  font-size: 18px;
+  color: #d70900;
+}
+
+@media (min-width: 800px) {
+  .logo {
+    width: 206px;
+    height: 221px;
+  }
+
+  .button-start {
+    width: 356px;
+    height: 84px;
+    font-size: 28px;
+  }
+
 }
