--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 
 body {
-    background-color: #FB6B6B;
-    margin-bottom: 140px;
+  background-color: #fb6b6b;
+  margin-bottom: 140px;
+}
+
+@media (min-width: 800px) {
+  body {
+    margin-bottom: 200px;
+  }
 }
