--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,32 +1,3 @@
-.flashcard {
-  width: 80vw;
-  height: 65px;
-  background-color: #ffffff;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 25px;
-}
-
-.flashcard p {
-  font-family: Recursive;
-  font-size: 16px;
-  font-weight: 700;
-  margin-left: 15px;
-}
-
-.flashcard ion-icon {
-  font-size: 25px;
-  margin-right: 15px;
-  --ionicon-stroke-width: 45px;
-}
-
-.flashcard img {
-  margin-right: 15px;
-}
-
 .red,
 .orange,
 .green {
@@ -112,19 +83,8 @@
   .arrow {
     width: 30px;
   }
-
-  .flashcard {
-    width: 565px;
-    height: 92px;
-  }
-
-  .flashcard p {
-    font-size: 24px;
-  }
-
-  .flashcard ion-icon {
-    font-size: 38px;
-    margin-right: 15px;
+  .arrow:hover {
+    cursor: pointer;
   }
 
   .card-front {
@@ -132,7 +92,7 @@
   }
 
   .card-front > h1 {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .error,
@@ -141,5 +101,11 @@
     width: 105px;
     height: 48px;
     font-size: 16px;
+  }
+
+  .error:hover,
+  .almost:hover,
+  .zap:hover {
+    cursor: pointer;
   }
 }
