--- a/src/components/Flashcards/style.css
+++ b/src/components/Flashcards/style.css
@@ -1,24 +1,47 @@
 .flashcard {
-    width: 80vw;
-    height: 65px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 25px;
+  width: 80vw;
+  height: 65px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
 }
 
 .flashcard p {
-    font-family: Recursive;
-    font-size: 16px;
-    font-weight: 700;
-    margin-left: 15px;
+  font-family: Recursive;
+  font-size: 16px;
+  font-weight: 700;
+  margin-left: 15px;
 }
 
 .flashcard ion-icon {
-    font-size: 25px;
-    margin-right: 15px;
+  font-size: 25px;
+  margin-right: 15px;
+  --ionicon-stroke-width: 45px;
 }
 
+.flashcard img {
+  margin-right: 15px;
+}
+
+@media (min-width: 800px) {
+  .flashcard {
+    width: 565px;
+    height: 92px;
+  }
+  .flashcard:hover {
+    cursor: pointer;
+  }
+
+  .flashcard p {
+    font-size: 22px;
+  }
+
+  .flashcard ion-icon {
+    font-size: 33px;
+    margin-right: 15px;
+  }
+}
