--- a/src/components/Restart/style.css
+++ b/src/components/Restart/style.css
@@ -16,5 +16,10 @@
     width: 250px;
     height: 52px;
     font-size: 20px;
+    border: none;
+  }
+
+  .button-restart:hover {
+    cursor: pointer;
   }
 }
