Otimizações fontes desktop

--- a/src/components/Welcome/style.css
+++ b/src/components/Welcome/style.css
@@ -33,14 +33,15 @@
 
 @media (min-width: 800px) {
   .logo {
-    width: 206px;
-    height: 221px;
+    width: 166px;
+    height: 181px;
   }
 
   .button-start {
-    width: 356px;
-    height: 84px;
+    width: 306px;
+    height: 64px;
     font-size: 28px;
+    font-size: 22px;
   }
 
   .button-start:hover {
